<resources>
    <string name="app_name">Logging Test App</string>
    <string name="commit_timed_operation">Commit Timed Operation</string>
    <string name="start_timed_operation">Start Timed Operation</string>
    <string name="dev_metrics_alarm">Dev Metrics Alarm</string>
    <string name="dev_metrics_watch">Dev Metrics Watch</string>
    <string name="dev_metrics_info">Dev Metrics Info</string>
    <string name="log_analytics">Log Analytics</string>
    <string name="add_attribute">Add Attr</string>
    <string name="remove_attribute">Remove Attr</string>
    <string name="crash">Crash</string>

    <string name="fs_logging_app_uptime_attr_name" translatable="false">TestAppUptime</string>
    <string name="fs_logging_timestamp_attr_name" translatable="false">TestAppTimestamp</string>
</resources>